--- a/local.properties
+++ b/local.properties
@@ -7,9 +7,8 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-<<<<<<< HEAD
-#Thu Aug 20 15:07:06 EDT 2015
-=======
-#Wed Aug 05 11:39:23 EDT 2015
->>>>>>> master
+#Thu Aug 20 23:08:41 EDT 2015
+>>>>>>>=master
 sdk.dir=E\:\\Software\\Matrix\\Android\\AndroidSDK
+=\=\=\=\=\=\=
+<<<<<<<=HEAD
