--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/udacity_popular_moive"
         android:label="@string/app_name"
         android:largeHeap="true"
         android:theme="@style/AppTheme">
