ContentProvider has been built
I am trying to revise methods in DatabaseHelper via ContentProvider.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,10 @@
             </intent-filter>
         </activity>
         <activity android:name=".moviedetail.MovieDetailsActivity" />
+
+        <provider
+            android:name=".provider.MovieInfoProvider"
+            android:authorities="nanodegree.udacity.leon.udacitypopularmovies.provider.MovieInfoProvider" />
     </application>
 
 </manifest>
