Content Provider support completed
I cannot believe I can make it, but I did! Now it's time for sharing
capability.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,9 @@
 
         <provider
             android:name=".provider.MovieInfoProvider"
-            android:authorities="nanodegree.udacity.leon.udacitypopularmovies.provider.MovieInfoProvider" />
+            android:authorities="nanodegree.udacity.leon.udacitypopularmovies.provider.MovieInfoProvider"
+            android:readPermission="android:permission.permRead"
+            android:writePermission="android.permission.permWrite" />
     </application>
 
 </manifest>
